# chat_system

./: .gitignore  README.md
.trae/rules/: git-commit-message.md
bRpc/: CMakeLists.txt  echo_client.cc  echo_server.cc  main.proto  test_brpc_client.cpp
chatsystem/code/server/common/: brpc_client.hpp  email_client.hpp  es_client.hpp  log.hpp  redis_client.hpp  speech_client.hpp  user_table.hpp  utils.hpp
chatsystem/code/server/file/: CMakeLists.txt  file_id_generator.hpp  file_server.cc  file_server_builder.cc  file_server_builder.hpp  file_service_impl.cc  file_service_impl.hpp  file_storage.hpp  local_file_storage.hpp
chatsystem/code/server/file/test/: file_client_test.cc
chatsystem/code/server/odb/: user-odb.cxx  user-odb.hxx  user-odb.ixx  user.hxx  user.sql
chatsystem/code/server/proto/: base.proto  file.proto  speech.proto
chatsystem/code/server/speech/: CMakeLists.txt  speech_server.cc  speech_server_builder.cc  speech_server_builder.h  speech_service_impl.cc  speech_service_impl.h
chatsystem/code/server/speech/test/: speech_client_test.cc
chatsystem/code/server/user/: CMakeLists.txt  spand.md  user_es.hpp  user_server.cc  user_server_builder.cc  user_server_builder.hpp  user_service_impl.cc  user_service_impl.hpp
chatsystem/code/server/user/test/email/: email_client_test.cc
chatsystem/code/server/user/test/es/: user_es_test.cc
chatsystem/code/server/user/test/mysql/: user_table_test.cc
chatsystem/code/server/user/test/redis/: redis_client_test.cc
common/: es_client.hpp  etcd_client.hpp  log.hpp  mq_client.hpp
etcd/: CMakeLists.txt  etcd_client.h  test_discover.cpp  test_etcd_client.cpp  test_register.cpp
example/: Makefile  client.cpp  server.cpp
gflags/: main  main.cc  main.conf
gtest/: Makefile  main.cc  test_main
odb/: main.cc  odb_app  person-odb.cxx  person-odb.hxx  person-odb.ixx  person.hxx  person.sql
qq/: qq_mail  qq_mail.cpp
redis++/: CMakeLists.txt  main.cpp
redis++/cmake/: hiredisConfig.cmake
spdlog/: Makefile  async.cc  log_test  sync.cc
spdlog/logger/: log_test  log_test.cc  test  test.cc
speech/aip-cpp-sdk-4.16.7/base/: base64.h  utils.h
websocketpp/: CMakeLists.txt  ws_client.cpp  ws_server.cpp
